# test-task

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  alembic_tasks.ini  pyproject.toml
api_fetcher/: exceptions.py  fetch_data.py  logging.py  schemas.py  storages.py
api_fetcher/database/: settings.py
api_fetcher/database/migrations/: env.py
api_fetcher/database/migrations/versions/: cc4ea7e6df81_create_posts_table.py
api_fetcher/database/models/: posts.py
cli_log_analyzer/: analyzer.py  arg_parser.py  dataclass.py  log_analyzer.py  utilities.py
file_processing/: arg_parser.py  converter.py  input_data.xml  json_saver.py  validators.py
task_manager/: cli.py  logging.py  manager.py
task_manager/database/: settings.py
task_manager/database/migrations/: env.py
task_manager/database/migrations/versions/: 589dae12efcf_initial_migration_for_tasks.py
task_manager/database/models/: task_manager.py
tests/: test_api_fetcher.py  test_cli_log_analyzer.py  test_file_processing.py  test_task_manager.py
