[project]
name = "test-task-for-keymakr"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaroslav Bordovoy",email = "yaroslavbordovoy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "alembic (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
