[project]
name = "test-task-for-keymakr"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaroslav Bordovoy",email = "yaroslavbordovoy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as asyncio-based"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
